# WADLer

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yaml
test-api/: README.md  main.py
wadler/: apitester.py  args.py  main.py  utils.py  wadlparser.py
