[project]
name = "wadler"
version = "0.1.0"
description = "A simple tool for testing API endpoints pulled from Web Application Description Language (WADL) files."
authors = [
    {name = "Liam Geyer",email = "liam.geyer@sra.io"}
]
license = {text = "AGPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wadler = "wadler.main:main"

[tool.uv]
exclude-newer = "P2D"

[solver]
min-release-age = 2